--- a/steps/src/index.css
+++ b/steps/src/index.css
@@ -7,6 +7,7 @@
   box-shadow: 1px 1px 20px black;
   min-height: 170px;
   padding:  20px;
+
 }
 
 .numbers {
@@ -46,4 +47,19 @@ button {
 .active{
   background-color:#7950f2;
   color: white;
+}
+
+.app-container {
+  border: solid 5px rgb(249, 247, 247);
+  position: relative;
+}
+
+.btn-close {
+  display: block;
+  background-color: black;
+  position: absolute;
+  top: 50px;
+  right: 450px;
+  font-size: 25px;
+  cursor: pointer;
 }
